--- a/Practica4_A/P4A.html
+++ b/Practica4_A/P4A.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es"><!--Esto es el lenguaje que se empleará en la página-->
     <head>
+        <meta charset="UTF-8">
      <title>Título Página</title>
     </head>
-     <body style="background-color: rgb(255, 255, 255);"> 
+     <body style="background-color: rgb(255, 255, 255);"> <!--Esto determina en código rgb el color del fondo de la página-->
           <h1>M04: Llenguage de marques</h1>
            <h2>
          <b>Exercici 5 - HTML (elements bàsics)</b>
@@ -20,24 +21,24 @@
             </p>
              <p><b><h2>Institut Jaume Balmes</b></h2></img></p>
              <p><b>Barcelona</b></p>
-             <img src="logo_hd.png" style="width: 100" height="100">
+             <img src="logo_hd.png" style="width: 100" height="100"><!--Con el style="width" y height se establece el tamaño de la imagen-->
             <p>
               Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
             </p>
             
-            <h2>
+            <h3>
                 <ul>
                     <li>Uno</li>
                     <li>Dos</li>
                     <li>Tres</li>
                 </ul>
                 <ol>
-                    <li><a href=”https://www.jaumebalmes.net/”>Index</li>
-                    <li><a href=”https://www.jaumebalmes.net/introduccio-al-projecte-educatiu-pec/”>About us</li>
-                    <li><a href=”https://www.jaumebalmes.net/contacte/”>Contacte</li>
+                   <li><a href="https://www.jaumebalmes.net/">Index</li>
+                   <li><a href="https://www.jaumebalmes.net/equip-directiu/">About Us</li>
+                   <li><a href="https://www.jaumebalmes.net/contacte/">Contacte</li>
                 </ol>
-            </h2>
+            </h3>
         </body>
 </html>
