--- a/practica4_B/practica4_B.html
+++ b/practica4_B/practica4_B.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html> 
-<html lang="es"> 
-    <head>
+<html lang="es"><!--Aixo es el llenguatge--> 
+    <head><!--Aixo es el cap-->
         <meta charset="UTF-8">
-        <title>Practica4_B</title>
+        <title>Practica4_B</title><!--El títul de la pàgina-->
     </head>
-    <body>
+    <body><!--Aixo es el cos-->
         <h1>M04: Llenguatge de marques</h1>
         <h2>Exercici 5 - HTML (elements bàsics)</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla dignissimos culpa, repellat imedit ipsa earum similique ducimus sunt sapiente asperiores quasi numquam ress magnam. Consequatur dicta libero sapiente ea aspernatur.</p>
@@ -18,7 +18,7 @@
             </ul>       
 
             <ol>
-                <li><a href="https://www.jaumebalmes.net/">Index</li>
+                <li><a href="https://www.jaumebalmes.net/">Index</li><!--Links-->
                 <li><a href="https://www.jaumebalmes.net/equip-directiu/">About Us</li>
                 <li><a href="https://www.jaumebalmes.net/contacte/">Contacte</li>
             </ol>
