--- a/Practica5_A/Ejercicio1A.html
+++ b/Practica5_A/Ejercicio1A.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <p id="titulo1">Pròxims llançaments de videojocs per al 2018</p>
-        <table class="default">
+        <table class="default" id="titulo2">
             <tr>
                 <td class="taula"><b>Data</b></td>
                 <td class="taula"><b>Joc</b></td>
