--- a/Practica5_A/Ejercicio1A.html
+++ b/Practica5_A/Ejercicio1A.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es"> <!--esto es el lenguaje-->
     <head>
         <meta charset="utf-8">
         <title>Pròxims llançaments de videojocs per al 2018</title>
         <link rel="stylesheet" href="ejercicio1A.css">
     </head>
     <body>
-        <p id="titulo1">Pròxims llançaments de videojocs per al 2018</p>
-        <table class="default" id="titulo2">
+        <p id="titulo1">Pròxims llançaments de videojocs per al 2018</p> <!--es el título-->
+        <table class="default" id="titulo2"><!--generé un id diferente para modificarlo y que se colocase correctamente-->
             <tr>
                 <td class="taula"><b>Data</b></td>
                 <td class="taula"><b>Joc</b></td>
