--- a/practica5/practica5html.html
+++ b/practica5/practica5html.html
@@ -13,7 +13,7 @@
     </head>
     <body><!--Aixo es el cos-->
         <h3 class= "titol1">Pròxims llançaments de videojocs per al 2018</h3>
-        <table class="default">
+        <table class="default"><!--Aixo es una taula-->
             <tr>
                 <td class="taula"><b>Joc</b></td>
                 <td class="taula"><b>Data</b></td>
